Bug 406742 - No column number, but editor Apperance configured to show cursor column number.
Summary: No column number, but editor Apperance configured to show cursor column number.
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: editor (other bugs)
Version First Reported In: 18.12.3
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-21 20:32 UTC by boput
Modified: 2019-04-26 00:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-18052-0.html (1.60 KB, text/html)
2019-04-26 00:04 UTC, boput
Details

Note You need to log in before you can comment on or make changes to this bug.
Description boput 2019-04-21 20:32:54 UTC
No cursor column number


STEPS TO REPRODUCE
Configure lokalize to show LEDS and cursor column number
2. 
3. 

OBSERVED RESULT
There are no cursor column number.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Simon Depiets 2019-04-25 07:52:41 UTC
Git commit 0afc1e5f6656ea0f121d92b33602c7a5c05359c6 by Simon Depiets.
Committed on 25/04/2019 at 07:51.
Pushed by sdepiets into branch 'master'.

Connect cursorPositionChange to the correct signal

M  +1    -1    src/xlifftextedit.cpp

https://commits.kde.org/lokalize/0afc1e5f6656ea0f121d92b33602c7a5c05359c6
Comment 2 Simon Depiets 2019-04-25 07:53:26 UTC
Git commit a0bab6e5b5652a000a98343bba6b2686e8a3419f by Simon Depiets.
Committed on 25/04/2019 at 07:52.
Pushed by sdepiets into branch 'Applications/19.04'.

Connect cursorPositionChange to the correct signal

M  +1    -1    src/xlifftextedit.cpp

https://commits.kde.org/lokalize/a0bab6e5b5652a000a98343bba6b2686e8a3419f
Comment 3 Simon Depiets 2019-04-25 07:54:24 UTC
I introduced that regression when I updated to the new signal API (picking up the wrong signal in the wrong class)

It's now fixed

Thank you for your report
Comment 4 boput 2019-04-26 00:04:52 UTC
Created attachment 119640 [details]
attachment-18052-0.html

You are welcome. Thanks.
Boput

Sent from Yahoo Mail on Android 
 
  On Thu, Apr 25, 2019 at 0:54, Simon Depiets<bugzilla_noreply@kde.org> wrote:   https://bugs.kde.org/show_bug.cgi?id=406742

--- Comment #3 from Simon Depiets <sdepiets@gmail.com> ---
I introduced that regression when I updated to the new signal API (picking up
the wrong signal in the wrong class)

It's now fixed

Thank you for your report