Connect cursorPositionChange to the correct signal

BUG: 406742